crates/analyzer/tests/snapshots/errors__call_call_on_self.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `__call__()` is not directly callable
  ┌─ compile_errors/call_call_on_self.fe:5:14
  │
5 │         self.__call__()
  │              ^^^^^^^^
  │
  = Note: `__call__` is not part of the contract's interface, and can't be called.


